almost finished basic html

--- a/games.html
+++ b/games.html
@@ -19,7 +19,112 @@
     <div>
         <input type="text" placeholder="Search...">
     </div>
-    
+    <main id="games_page">
+        <h1>Games</h1>
+        <p id="intro">
+            “Explore video games with simple summaries and content ratings. Each game card
+            shows what the gameplay is like, the level of intensity, and the platforms you can play it
+            on.”
+        </p>
+        <div id="game_search">
+            <input type="text" placeholder="Search...">
+        </div>
+        <section id="posters">
+            <div id="">
+                <details>
+                    <summary>View Details</summary>
+
+                    <p class="summaries">hello</p>
+                    <p class="platforms"></p>
+                    <p class="ratings"></p>
+                </details>
+
+                <h3 class="title"></h3>
+                <img src="" alt="">
+                <details>
+                    <summary>View Details</summary>
+                    <p class="summaries">hello can</p>
+                    <p class="platforms">you </p>
+                    <p class="ratings">hear me?</p>
+                </details>
+                
+            </div>
+            <div id="">
+                <h3 class="title"></h3>
+                <img src="" alt="">
+                <p class="summaries"></p>
+                <p class="platforms"></p>
+                <p class="ratings"></p>
+                <button>View Details</button>
+            </div>
+            <div id="">
+                <h3 class="title"></h3>
+                <img src="" alt="">
+                <p class="summaries"></p>
+                <p class="platforms"></p>
+                <p class="ratings"></p>
+                <button>View Details</button>
+            </div>
+            <div id="">
+                <h3 class="title"></h3>
+                <img src="" alt="">
+                <p class="summaries"></p>
+                <p class="platforms"></p>
+                <p class="ratings"></p>
+                <button>View Details</button>
+            </div>
+            <div id="">
+                <h3 class="title"></h3>
+                <img src="" alt="">
+                <p class="summaries"></p>
+                <p class="platforms"></p>
+                <p class="ratings"></p>
+                <button>View Details</button>
+            </div>
+        </section>
+        <section id="ratings_explained">
+            <h2>Video Game Ratings Explained</h2>
+            <p>
+                Video games use a rating system to show the recommended age group and the type of
+                content the game includes. Here are the most common rating symbols and what they
+                mean in simple terms.
+            </p>
+            <div class="rating">
+                <h3 class="rating_title">E — Everyone</h3>
+                <p class="rating_description">
+                    Suitable for all ages. Contains very mild or cartoon-style action.
+                </p>
+            </div>
+            <div class="rating">
+                <h3 class="rating_title">E10+ — Everyone 10+</h3>
+                <p class="rating_description">
+                    May include mild violence or slightly scary themes. Good for most older kids.
+                </p>
+            </div>
+            <div class="rating">
+                <h3 class="rating_title">T — Teen</h3>
+                <p class="rating_description">
+                    Contains moderate violence, mild language, or suggestive content. Best for teens and
+                    above.
+                </p>
+            </div>
+            <div class="rating">
+                <h3 class="rating_title">M — Mature 17+</h3>
+                <p class="rating_description">
+                    Stronger content such as intense violence, strong language, or dark themes. Intended
+                    for mature players.
+                </p>
+            </div>
+            <div class="rating">
+                <h3 class="rating_title">A — Adults Only</h3>
+                <p class="rating_description">
+                    Contains adult-level material. Rarely used and not recommended for general
+                    audiences.
+                </p>
+            </div>
+
+        </section>
+    </main>
     <footer>
         <a href="###">Contact</a>
         <a href="###">About</a>
