working buttons and changed text

--- a/games.html
+++ b/games.html
@@ -27,59 +27,169 @@
             on.”
         </p>
         <div id="game_search">
-            <input type="text" placeholder="Search...">
+            <input type="text" placeholder="Search games...">
         </div>
         <section id="posters">
             <div id="">
+                <h3 class="title">game title</h3>
+                <img src="" alt="game poster">
                 <details>
                     <summary>View Details</summary>
-
-                    <p class="summaries">hello</p>
-                    <p class="platforms"></p>
-                    <p class="ratings"></p>
-                </details>
-
-                <h3 class="title"></h3>
-                <img src="" alt="">
-                <details>
-                    <summary>View Details</summary>
-                    <p class="summaries">hello can</p>
-                    <p class="platforms">you </p>
-                    <p class="ratings">hear me?</p>
+                    <p class="summaries">
+                        This is a short description of the game that explains the style, genre, and general feel
+                        without going into deep detail.
+                    </p>
+                    <p class="platforms">
+                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                    </p>
+                    <p class="ratings">
+                        Violence: Low / Medium / High
+                        Language: Low / Medium / High
+                        Difficulty: Easy / Moderate / Hard
+                        Themes: Light / Moderate / Heavy
+                    </p>
                 </details>
                 
             </div>
             <div id="">
-                <h3 class="title"></h3>
-                <img src="" alt="">
-                <p class="summaries"></p>
-                <p class="platforms"></p>
-                <p class="ratings"></p>
-                <button>View Details</button>
+                <h3 class="title">game title</h3>
+                <img src="" alt="game poster">
+                <details>
+                    <summary>View Details</summary>
+                    <p class="summaries">
+                        This is a short description of the game that explains the style, genre, and general feel
+                        without going into deep detail.
+                    </p>
+                    <p class="platforms">
+                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                    </p>
+                    <p class="ratings">
+                        Violence: Low / Medium / High
+                        Language: Low / Medium / High
+                        Difficulty: Easy / Moderate / Hard
+                        Themes: Light / Moderate / Heavy
+                    </p>
+                </details>
             </div>
             <div id="">
-                <h3 class="title"></h3>
-                <img src="" alt="">
-                <p class="summaries"></p>
-                <p class="platforms"></p>
-                <p class="ratings"></p>
-                <button>View Details</button>
+                <h3 class="title">game title</h3>
+                <img src="" alt="game poster">
+                <details>
+                    <summary>View Details</summary>
+                    <p class="summaries">
+                        This is a short description of the game that explains the style, genre, and general feel
+                        without going into deep detail.
+                    </p>
+                    <p class="platforms">
+                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                    </p>
+                    <p class="ratings">
+                        Violence: Low / Medium / High
+                        Language: Low / Medium / High
+                        Difficulty: Easy / Moderate / Hard
+                        Themes: Light / Moderate / Heavy
+                    </p>
+                </details>
             </div>
             <div id="">
-                <h3 class="title"></h3>
-                <img src="" alt="">
-                <p class="summaries"></p>
-                <p class="platforms"></p>
-                <p class="ratings"></p>
-                <button>View Details</button>
+                <h3 class="title">game title</h3>
+                <img src="" alt="game poster">
+                <details>
+                    <summary>View Details</summary>
+                    <p class="summaries">
+                        This is a short description of the game that explains the style, genre, and general feel
+                        without going into deep detail.
+                    </p>
+                    <p class="platforms">
+                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                    </p>
+                    <p class="ratings">
+                        Violence: Low / Medium / High
+                        Language: Low / Medium / High
+                        Difficulty: Easy / Moderate / Hard
+                        Themes: Light / Moderate / Heavy
+                    </p>
+                </details>
             </div>
             <div id="">
-                <h3 class="title"></h3>
-                <img src="" alt="">
-                <p class="summaries"></p>
-                <p class="platforms"></p>
-                <p class="ratings"></p>
-                <button>View Details</button>
+                <h3 class="title">game title</h3>
+                <img src="" alt="game poster">
+                <details>
+                    <summary>View Details</summary>
+                    <p class="summaries">
+                        This is a short description of the game that explains the style, genre, and general feel
+                        without going into deep detail.
+                    </p>
+                    <p class="platforms">
+                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                    </p>
+                    <p class="ratings">
+                        Violence: Low / Medium / High
+                        Language: Low / Medium / High
+                        Difficulty: Easy / Moderate / Hard
+                        Themes: Light / Moderate / Heavy
+                    </p>
+                </details>
+            </div>
+            <div id="">
+                <h3 class="title">game title</h3>
+                <img src="" alt="game poster">
+                <details>
+                    <summary>View Details</summary>
+                    <p class="summaries">
+                        This is a short description of the game that explains the style, genre, and general feel
+                        without going into deep detail.
+                    </p>
+                    <p class="platforms">
+                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                    </p>
+                    <p class="ratings">
+                        Violence: Low / Medium / High
+                        Language: Low / Medium / High
+                        Difficulty: Easy / Moderate / Hard
+                        Themes: Light / Moderate / Heavy
+                    </p>
+                </details>
+            </div>
+            <div id="">
+                <h3 class="title">game title</h3>
+                <img src="" alt="game poster">
+                <details>
+                    <summary>View Details</summary>
+                    <p class="summaries">
+                        This is a short description of the game that explains the style, genre, and general feel
+                        without going into deep detail.
+                    </p>
+                    <p class="platforms">
+                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                    </p>
+                    <p class="ratings">
+                        Violence: Low / Medium / High
+                        Language: Low / Medium / High
+                        Difficulty: Easy / Moderate / Hard
+                        Themes: Light / Moderate / Heavy
+                    </p>
+                </details>
+            </div>
+            <div id="">
+                <h3 class="title">game title</h3>
+                <img src="" alt="game poster">
+                <details>
+                    <summary>View Details</summary>
+                    <p class="summaries">
+                        This is a short description of the game that explains the style, genre, and general feel
+                        without going into deep detail.
+                    </p>
+                    <p class="platforms">
+                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                    </p>
+                    <p class="ratings">
+                        Violence: Low / Medium / High
+                        Language: Low / Medium / High
+                        Difficulty: Easy / Moderate / Hard
+                        Themes: Light / Moderate / Heavy
+                    </p>
+                </details>
             </div>
         </section>
         <section id="ratings_explained">
