added the palette and color codes in images file

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div>
         <input type="text" placeholder="Search...">
     </div>
-     <div class="mainbox">
+     <div class="hero">
         <h1>Trueview - See Media Clearly</h1>
         <img src="images/hero.png" alt="Christmas family watching tv">
-        <button onclick="window.location.href='https://example. ###'">
+        <button onclick="window.location.href='###'">
             Get Started
         </button>
      </div>
-    <div class="lvlone">
+    <div class="belowhero">
         <h2>Why we matter</h2>
         <section class="ratings">
              <header>Ratings</header>
@@ -40,23 +40,8 @@
              <header>Content Tags</header>
              <p>Use tags like ‘No Jump Scares,’ ‘Light Violence,’ or ‘Wholesome’ to quickly filter movies, shows, and games that fit your comfort level.</p>
         </section>
-        <section class="comparicons">
+        <section class="comparisons">
              <header>Comparisons</header>
-        </section>
-    </div>
-    <div class="lvltwo">
-      <h3>More thank warnings</h3>
-        <section>
-            <header>Actors &  Voice profiler</header>
-        </section>
-        <section>
-            <header>Community</header>
-        </section>
-        <section>
-            <header>Story & Universe</header>
-        </section>
-        <section>
-            <header>FAQ</header>
         </section>
     </div>
     <footer>
