--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <img src="images/logo.png" alt="Trueview logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">Guides</a>
-        <a href="#">Movies</a>
-        <a href="#">Shows</a>
+        <a href="#">Movies & Shows</a>
         <a href="#">Games</a>
-        <a href="#">Actors</a>
         <a href="#">About</a>
     </nav>
     <div>
@@ -23,25 +22,30 @@
         <h1>Trueview - See Media Clearly</h1>
         <img src="images/hero.png" alt="Christmas family watching tv">
         <button onclick="window.location.href='###'">
-            Get Started
+            Start Browsing
         </button>
      </div>
     <div class="belowhero">
         <h2>Why we matter</h2>
         <section class="ratings">
-             <header>Ratings</header>
+            <img src="images/ratings_icon.png" alt="Audio sliders icon">
+             <h2>Ratings</h2>
              <p>Get simple breakdowns of language, violence, scary moments, and themes for every title. We make ratings easy to understand.</p>
         </section>
         <section class="parental">
-             <header>Parental Guides</header>
-             <p></p>
+            <img src="images/guides_icon.png" alt="Parent and child icon">
+             <h2>Parental Guides</h2>
+             <p>Short, helpful guides that explain tone and intensity. Perfect for parents who want to make safe choices for family viewing.</p>
         </section>
         <section class="contenttags">
-             <header>Content Tags</header>
+            <img src="images/tags_icon.png" alt="Hashtag icon">
+             <h2>Content Tags</h2>
              <p>Use tags like ‘No Jump Scares,’ ‘Light Violence,’ or ‘Wholesome’ to quickly filter movies, shows, and games that fit your comfort level.</p>
         </section>
-        <section class="comparisons">
-             <header>Comparisons</header>
+        <section class="generator">
+            <img src="images/generator_icon.png" alt="Simple spark icon"> <!-- probably going to change icon -->
+             <h2>Safe-to-watch-</h2>
+             <p>Tell us who you’re watching with, and we’ll suggest titles that match everyone’s comfort levels.</p>
         </section>
     </div>
     <footer>
