--- a/about.html
+++ b/about.html
@@ -16,21 +16,23 @@
         <a href="#">About</a>
     </nav>
     <h1>About Page</h1>
-    <div>
-        <h2>About Trueview</h2>
-            <p></p>
-    </div>
-    <div>
-        <h2>Mission Statement</h2>
-            <p></p>
-    </div>
-    <div>
-        <h2>Values</h2>
-            <p></p>
-    </div>
-    <div>
-        <h2>Contact</h2>
-            <p></p>
+    <div clas="aboutcontent">
+        <div>
+            <h2>About Trueview</h2>
+                <p></p>
+        </div>
+        <div>
+            <h2>Mission Statement</h2>
+                <p></p>
+        </div>
+        <div>
+            <h2>Values</h2>
+                <p></p>
+        </div>
+        <div>
+            <h2>Contact</h2>
+                <p></p>
+        </div>
     </div>
     <footer>
         <a href="###">Contact</a>
