--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/logo.png" alt="Trueview logo">
+    <img src="images/logo.png" class="logo" alt="Trueview logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">Guides</a>
@@ -18,35 +18,35 @@
     <div>
         <input type="text" placeholder="Search...">
     </div>
-     <div class="hero">
-        <h1>Trueview - See Media Clearly</h1>
-        <img src="images/hero.png" alt="Christmas family watching tv">
-        <button onclick="window.location.href='###'">
-            Start Browsing
-        </button>
-     </div>
+    <div class="hero">
+        <h1>Trueview - See Media Clearly</h1>    
+            <img src="images/hero.png" alt="Christmas family watching tv">
+            <button onclick="window.location.href='###'">
+                Start Browsing
+            </button>
+    </div>
     <div class="belowhero">
-        <h2>Why we matter</h2>
-        <section class="ratings">
-            <img src="images/ratings_icon.png" alt="Audio sliders icon">
-             <h2>Ratings</h2>
-             <p>Get simple breakdowns of language, violence, scary moments, and themes for every title. We make ratings easy to understand.</p>
-        </section>
-        <section class="parental">
-            <img src="images/guides_icon.png" alt="Parent and child icon">
-             <h2>Parental Guides</h2>
-             <p>Short, helpful guides that explain tone and intensity. Perfect for parents who want to make safe choices for family viewing.</p>
-        </section>
-        <section class="contenttags">
-            <img src="images/tags_icon.png" alt="Hashtag icon">
-             <h2>Content Tags</h2>
-             <p>Use tags like ‘No Jump Scares,’ ‘Light Violence,’ or ‘Wholesome’ to quickly filter movies, shows, and games that fit your comfort level.</p>
-        </section>
-        <section class="generator">
-            <img src="images/generator_icon.png" alt="Simple spark icon"> <!-- probably going to change icon -->
-             <h2>Safe-to-watch-</h2>
-             <p>Tell us who you’re watching with, and we’ll suggest titles that match everyone’s comfort levels.</p>
-        </section>
+        <h1>Why we matter</h1>
+            <section class="ratings">
+                <h2>Ratings</h2>
+                <img src="images/ratings_icon.png" alt="Audio sliders icon">
+                    <p>Get simple breakdowns of language, violence, scary moments, and themes for every title. We make ratings easy to understand.</p>
+            </section>
+            <section class="parental">
+                <h2>Parental Guides</h2>
+                <img src="images/guides_icon.png" alt="Parent and child icon">
+                    <p>Short, helpful guides that explain tone and intensity. Perfect for parents who want to make safe choices for family viewing.</p>
+            </section>
+            <section class="contenttags">
+                <h2>Content Tags</h2>
+                <img src="images/tags_icon.png" alt="Hashtag icon">
+                    <p>Use tags like ‘No Jump Scares,’ ‘Light Violence,’ or ‘Wholesome’ to quickly filter movies, shows, and games that fit your comfort level.</p>
+            </section>
+            <section class="generator">
+                <h2>Safe-to-watch-</h2>
+                <img src="images/generator_icon.png" alt="Simple spark icon"> <!-- probably going to change icon -->
+                    <p>Tell us who you’re watching with, and we’ll suggest titles that match everyone’s comfort levels.</p>
+            </section>
     </div>
     <footer>
         <a href="###">Contact</a>
