--- a/about.html
+++ b/about.html
@@ -18,20 +18,26 @@
     <h1>About Page</h1>
     <div clas="aboutcontent">
         <div>
-            <h2>About Trueview</h2>
-                <p></p>
+            <h2>About TrueView</h2>
+                <p>TrueView was created to help people understand exactly what they’re about to watch. Instead of vague rating labels, TrueView gives clear and simple content information so families and cautious viewers can feel confident about their choices. Our goal is to make entertainment easier, safer, and more predictable.</p>
         </div>
         <div>
             <h2>Mission Statement</h2>
-                <p></p>
+                <p>Our mission is to bring honesty and clarity to entertainment. We believe viewers deserve to know what’s in their movies, shows, and games before they watch them. TrueView helps people avoid surprises and pick content that fits their values.</p>
         </div>
         <div>
-            <h2>Values</h2>
-                <p></p>
+            <h2>Our Core Values</h2>
+             <p>
+                Honesty: Content explained clearly and openly
+                Clarity: No confusing rating language
+                User Respect: Viewers choose based on comfort
+                Family Focus: Tools built for parents and kids
+                Simple Design: Easy to read and easy to use
+             </p>
         </div>
         <div>
             <h2>Contact</h2>
-                <p></p>
+                <p>For questions, feedback, or suggestions, viewers can reach out through the contact page or social links on the website. TrueView is here to help people enjoy entertainment with confidence.</p>
         </div>
     </div>
     <footer>
