--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
     <img src="images/logo.png" class="logo" alt="Trueview logo">
     <nav>
+      <div class="navlinks">
         <a href="#">Home</a>
         <a href="#">Guides</a>
         <a href="#">Movies & Shows</a>
         <a href="#">Games</a>
         <a href="#">About</a>
+      </div>
     </nav>
+</header>
     <div>
         <input type="text" placeholder="Search...">
     </div>
     <div class="hero">
-        <h1>Trueview - See Media Clearly</h1>    
-            <img src="images/hero.png" alt="Christmas family watching tv">
+        <h1>TrueView - See Media Clearly</h1>    
+          <img src="images/hero.png" alt="Christmas family watching tv">
             <button onclick="window.location.href='###'">
                 Start Browsing
             </button>
