--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
     </nav>
 </header>
-    <div>
+    <div id="searchbar">
         <input type="text" placeholder="Search...">
     </div>
     <div class="hero">
         <h1>TrueView - See Media Clearly</h1>    
-          <img src="images/hero.png" alt="Christmas family watching tv">
-            <button onclick="window.location.href='###'">
+          <img src="images/hero.png" id="heroimage" alt="Christmas family watching tv">
+            <button class="button" onclick="window.location.href='###'">
                 Start Browsing
             </button>
     </div>
