--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <img src="images/logo.png" class="logo" alt="Trueview logo">
     <nav>
       <div class="navlinks">
-        <a href="#">Home</a>
-        <a href="#">Guides</a>
+        <a href="index.html">Home</a>
+        <a href="guides.html">Guides</a>
         <a href="#">Movies & Shows</a>
-        <a href="#">Games</a>
-        <a href="#">About</a>
+        <a href="games.html">Games</a>
+        <a href="about.html">About</a>
       </div>
     </nav>
 </header>
