--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
         <h1>Why we matter</h1>
             <section class="ratings">
                 <h2>Ratings</h2>
-                <img src="images/ratings_icon.png" alt="Audio sliders icon">
+                <img src="images/ratings_icon.png" id="ratingsicon" alt="Audio sliders icon">
                     <p>Get simple breakdowns of language, violence, scary moments, and themes for every title. We make ratings easy to understand.</p>
             </section>
             <section class="parental">
                 <h2>Parental Guides</h2>
-                <img src="images/guides_icon.png" alt="Parent and child icon">
+                <img src="images/guides_icon.png" id="guidesicon" alt="Parent and child icon">
                     <p>Short, helpful guides that explain tone and intensity. Perfect for parents who want to make safe choices for family viewing.</p>
             </section>
             <section class="contenttags">
                 <h2>Content Tags</h2>
-                <img src="images/tags_icon.png" alt="Hashtag icon">
+                <img src="images/tags_icon.png" id="tagsicon" alt="Hashtag icon">
                     <p>Use tags like ‘No Jump Scares,’ ‘Light Violence,’ or ‘Wholesome’ to quickly filter movies, shows, and games that fit your comfort level.</p>
             </section>
             <section class="generator">
                 <h2>Safe-to-watch-</h2>
-                <img src="images/generator_icon.png" alt="Simple spark icon"> <!-- probably going to change icon -->
+                <img src="images/generator_icon.png" id="generatoricon" alt="Simple spark icon"> <!-- probably going to change icon -->
                     <p>Tell us who you’re watching with, and we’ll suggest titles that match everyone’s comfort levels.</p>
             </section>
     </div>
