cleaned up discriptions

--- a/games.html
+++ b/games.html
@@ -43,13 +43,13 @@
                         challenging modes.
                     </p>
                     <p class="platforms">
-                        Available on: PC, PlayStation, Xbox, Nintendo Switch                    </p>
-                    <p class="ratings">
-                        Violence: Low
-                        Language: Low
-                        Difficulty: Easy
-                        Themes: Light
-                    </p>
+                        <strong>Available on:</strong> PC, PlayStation, Xbox, Nintendo Switch                    </p>
+                    <ul class="ratings">
+                        <li>Violence: Low</li>
+                        <li>Language: Low</li>
+                        <li>Difficulty: Easy</li>
+                        <li>Themes: Light</li>
+                    </ul>
                 </details>
                 
             </div>
@@ -65,13 +65,13 @@
                         lighthearted, social atmosphere.
                     </p>
                     <p class="platforms">
-                        Available on: PC, PlayStation, Xbox                    </p>
-                    <p class="ratings">
-                        Violence: Low / Medium (varies by game)
-                        Language: Low / Medium (chat-based)
-                        Difficulty: Easy / Moderate (varies by game)
-                        Themes: Light / Moderate
-                    </p>
+                        <strong>Available on:</strong> PC, PlayStation, Xbox                    </p>
+                    <ul class="ratings">
+                        <li>Violence: Low / Medium (varies by game)</li>
+                        <li>Language: Low / Medium (chat-based)</li>
+                        <li>Difficulty: Easy / Moderate (varies by game)</li>
+                        <li>Themes: Light / Moderate</li>
+                    </ul>
                 </details>
             </div>
             <div class="game" id="">
@@ -86,14 +86,14 @@
                         competitive style.
                     </p>
                     <p class="platforms">
-                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                        <strong>Available on:</strong> PC, PlayStation, Xbox, Nintendo Switch
                     </p>
-                    <p class="ratings">
-                        Violence: Medium
-                        Language: Low
-                        Difficulty: Moderate
-                        Themes: Moderate
-                    </p>
+                    <ul class="ratings">
+                        <li>Violence: Medium</li>
+                        <li>Language: Low</li>
+                        <li>Difficulty: Moderate</li>
+                        <li>Themes: Moderate</li>
+                    </ul>
                 </details>
             </div>
             <div class="game" id="">
@@ -108,14 +108,14 @@
                         metroidvania experience.
                     </p>
                     <p class="platforms">
-                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                        <strong>Available on:</strong> PC, PlayStation, Xbox, Nintendo Switch
                     </p>
-                    <p class="ratings">
-                        Violence: Medium
-                        Language: Low
-                        Difficulty: Hard
-                        Themes: Moderate / Heavy
-                    </p>
+                    <ul class="ratings">
+                        <li>Violence: Medium</li>
+                        <li>Language: Low</li>
+                        <li>Difficulty: Hard</li>
+                        <li>Themes: Moderate / Heavy</li>
+                    </ul>
                 </details>
             </div>
             <div class="game" id="">
@@ -130,13 +130,13 @@
                         wildlife, and quiet atmospheric moments.
                     </p>
                     <p class="platforms">
-                        Available on: Nintendo Switch                    </p>
-                    <p class="ratings">
-                        Violence: Medium
-                        Language: Low
-                        Difficulty: Moderate
-                        Themes: Moderate
-                    </p>
+                        <strong>Available on:</strong> Nintendo Switch                    </p>
+                    <ul class="ratings">
+                        <li>Violence: Medium</li>
+                        <li>Language: Low</li>
+                        <li>Difficulty: Moderate</li>
+                        <li>Themes: Moderate</li>
+                    </ul>
                 </details>
             </div>
             <div class="game" id="">
@@ -151,14 +151,14 @@
                         fast-paced matches.
                     </p>
                     <p class="platforms">
-                        Available on: PC
+                        <strong>Available on:</strong> PC
                     </p>
-                    <p class="ratings">
-                        Violence: Medium
-                        Language: Medium (player-based)
-                        Difficulty: Hard
-                        Themes: Moderate
-                    </p>
+                    <ul class="ratings">
+                        <li>Violence: Medium</li>
+                        <li>Language: Medium (player-based)</li>
+                        <li>Difficulty: Hard</li>
+                        <li>Themes: Moderate</li>
+                    </ul>
                 </details>
             </div>
             <div class="game" id="">
@@ -173,14 +173,14 @@
                         cartoon-styled action.
                     </p>
                     <p class="platforms">
-                        Available on: Mobile
+                        <strong>Available on:</strong> Mobile
                     </p>
-                    <p class="ratings">
-                        Violence: Low
-                        Language: Low
-                        Difficulty: Moderate
-                        Themes: Light
-                    </p>
+                    <ul class="ratings">
+                        <li>Violence: Low</li>
+                        <li>Language: Low</li>
+                        <li>Difficulty: Moderate</li>
+                        <li>Themes: Light</li>
+                    </ul>
                 </details>
             </div>
             <div class="game" id="">
@@ -195,14 +195,14 @@
                         fights.
                     </p>
                     <p class="platforms">
-                        Available on: PC, PlayStation, Xbox, Nintendo Switch
+                        <strong>Available on:</strong> PC, PlayStation, Xbox, Nintendo Switch
                     </p>
-                    <p class="ratings">
-                        Violence: Medium
-                        Language: Low
-                        Difficulty: Easy / Moderate
-                        Themes: Light
-                    </p>
+                    <ul class="ratings">
+                        <li>Violence: Medium</li>
+                        <li>Language: Low</li>
+                        <li>Difficulty: Easy / Moderate</li>
+                        <li>Themes: Light</li>
+                    </ul>
                 </details>
             </div>
         </section>
