Anybody know why the body is brown???

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </nav>
 </header>
-    <div id="searchbar">
+    <div class="searchbar">
         <input type="text" placeholder="Search...">
     </div>
     <div class="hero">
