--- a/about.html
+++ b/about.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/logo.png" alt="Trueview logo">
+<header>
+    <img src="images/logo.png" class="logo" alt="Trueview logo">
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Guides</a>
-        <a href="#">Movies & Shows</a>
-        <a href="#">Games</a>
-        <a href="#">About</a>
+      <div class="navlinks">
+        <a href="index.html">Home</a>
+        <a href="guides.html">Guides</a>
+        <a href="movies_and_games.html">Movies & Shows</a>
+        <a href="games.html">Games</a>
+        <a href="about.html">About</a>
+      </div>
     </nav>
+</header>
     <h1>About Page</h1>
     <div clas="aboutcontent">
         <div>
