--- a/guides.html
+++ b/guides.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/logo.png" class="logo" alt= "Trueview logo">
+<header>
+    <img src="images/logo.png" class="logo" alt="Trueview logo">
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Guides</a>
-        <a href="#">Movies</a>
-        <a href="#">Shows</a>
-        <a href="#">Games</a>
-        <a href="#">Actors</a>
-        <a href="#">About</a>
+      <div class="navlinks">
+        <a href="index.html">Home</a>
+        <a href="guides.html">Guides</a>
+        <a href="movies_and_games.html">Movies & Shows</a>
+        <a href="games.html">Games</a>
+        <a href="about.html">About</a>
+      </div>
     </nav>
+</header>
     <h1>Guides</h1>
         <div class="guidescontent">
                 <p>This page offers simple guides to help viewers understand content ratings, find safe movies, and make good choices for different age groups. Each section breaks down important information in a clear and family-friendly way.</p>
