--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="navlinks">
         <a href="index.html">Home</a>
         <a href="guides.html">Guides</a>
-        <a href="#">Movies & Shows</a>
+        <a href="movies_and_games.html">Movies & Shows</a>
         <a href="games.html">Games</a>
         <a href="about.html">About</a>
       </div>
